minor changes added, solutions page and services page spacing fixed

--- a/src/Pages/ServicesPage/Services.css
+++ b/src/Pages/ServicesPage/Services.css
@@ -1,3 +1,7 @@
 .services{
-    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh
 }
