--- a/src/Pages/Solutions/Solutions.css
+++ b/src/Pages/Solutions/Solutions.css
@@ -1,3 +1,7 @@
 .solutions{
-    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh
 }
